--- a/app/views/surveys/results.html.erb
+++ b/app/views/surveys/results.html.erb
@@ -1,20 +1,28 @@
-<h1>Survey Form Results</h1>
 
-<% if flash[:success] %>
-  <div id="success_explanation">
-    <div class="alert alert-success">
-      <%= flash[:success] %>
+<div class= "container">
+
+  <h1>Survey Form Results</h1>
+
+  <% if flash[:success] %>
+    <div id="success_explanation">
+      <div class="alert alert-success">
+        <%= flash[:success] %>
+      </div>
+    </div>
+  <% end %>
+
+<div class='row'>
+  <div class="col col-md-5 col-offset-3">
+      <h4>Name: <%= @results['name'] %> </h4>
+
+      <h4>Location: <%= @results['location'] %> </h4>
+
+      <h4>Language: <%= @results['language'] %> </h4>
+
+      <h4>Comment: <%= @results['comment'] %> </h4>
+
+
+      <a href='/home'>Go Back</a>
     </div>
   </div>
-<% end %>
-
-<h4>Name: <%= @results['name'] %> </h4>
-
-<h4>Location: <%= @results['location'] %> </h4>
-
-<h4>Language: <%= @results['language'] %> </h4>
-
-<h4>Comment: <%= @results['comment'] %> </h4>
-
-
-<a href='/home'>Go Back</a>
+</div>
