--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,26 @@
  *= require_tree .
  *= require_self
  */
+
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
+
+
+ #error_explanation {
+   width: 400px;
+   padding: 40px 40px;
+   color: red;
+   ul {
+     color: red;
+     margin: 0 0 30px 0;
+   }
+ }
+ #success_explanation {
+   width: 400px;
+   padding: 40px 40px;
+   color: green;
+   ul {
+     color: green;
+     margin: 0 0 30px 0;
+   }
+ }
